--- a/src/denuncia-modal/denuncia-modal.html
+++ b/src/denuncia-modal/denuncia-modal.html
@@ -143,7 +143,10 @@
             </table>
             <div class="table-footer">
               <p>Total de registros: 10</p>
-              <p>Página 1 de 143</p>
+              <div class="pagination">
+                <p>Página 1 de 143</p>
+                <img src="../assets/chevron-right.svg" alt="next-pagination">
+              </div>
             </div>
           </main>
         </div>
