feat: link login page

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -24,15 +24,16 @@
     </div>
     <div class="form-container">
       <p class="text-main-color">LOGIN</p>
-      <form name="form_login" class="form-login" action="do_login.html" method="POST">
+      <form name="form_login" class="form-login" action="../denuncias/denuncias.html">
+        <!--method="POST"-->
         <input type="text" class="input-base" name="nome" placeholder="Usuário" /><br />
         <input type="password" class="input-base" name="senha" placeholder="Senha" /><br />
         <input type="submit" class="button-base bg-main-color" value="Entrar" />
       </form>
       <div class="options">
-        <a> Esqueceu a Senha?</a>
-        <a> Cadastrar</a>
-        <a> Entrar como convidado</a>
+        <a href="../recuperar-senha/recuperar-senha.html"> Esqueceu a Senha?</a>
+        <a href="../cadastro/cadastro.html"> Cadastrar</a>
+        <a href="../denuncias-convidado/denuncias-convidado.html"> Entrar como convidado</a>
       </div>
     </div>
   </div>
