feat: link pages

--- a/src/cadastro/cadastro.html
+++ b/src/cadastro/cadastro.html
@@ -21,7 +21,8 @@
     <div class="form-container">
       <p class="text-main-color">Cadastro</p>
       <br />
-      <form name="form_login" class="form-login" action="do_login.html" method="POST"> <br />
+      <form name="form_login" class="form-login" action="../login/login.html"> <br />
+        <!-- method="POST" -->
         <input type="text" class="input-base" name="nome" placeholder="Nome Completo" /><br />
         <input type="text" class="input-base" name="cpf" placeholder="CPF" /><br />
         <input type="email" class="input-base" name="Email" placeholder="Email" /><br />
