--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -17,52 +17,61 @@
 </head>
 
 <body>
-  <div class="left-navbar">
+  <nav class="left-navbar">
     <div class="logo-nav">
       <img src="../assets/white_icon.svg" alt="sos-logo">
       <h4>WEB</h4>
     </div>
     <div class="nav-options">
       <div class="home-nav">
-        <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        </a>
         <p>Denúncias</p>
       </div>
       <div class="user-denunciations-nav">
-        <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        <a href="../minhas-denuncias/minhas-denuncias.html">
+          <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        </a>
         <p>Minhas denúncias</p>
       </div>
       <div class="logout-nav">
-        <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        <a href="../login/login.html">
+          <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        </a>
         <p>Sair</p>
       </div>
     </div>
-  </div>
+  </nav>
   <div class="app">
-    <div class="top-navbar">
+    <header class="top-navbar">
       <p>Lorem ipsum</p>
-      <img src="../assets/user.svg" alt="user">
-    </div>
+      <a href="../usuario/usuario.html">
+        <img src="../assets/user.svg" alt="user">
+      </a>
+    </header>
     <div class="app-container">
       <div class="card-app">
         <div class="sign-up">
           <!-- DIV DA PÁGINA -->
           <div class="form-container">
             <p class="text-main-color">Criar Denúncia </p>
-            <form name="form_login" class="form-login" action="do_login.html" method="POST">
+            <form name="form_login" class="form-login" action="../minhas-denuncias/minhas-denuncias.html">
+              <!-- method="POST" -->
               <b>Nome da instituição/vendedor:</b>
 
-              <input class="text" class="input-base" name="nome" size="40px" />
+              <input class="input-base" name="nome" size="40px" />
 
               <br />
               <br />
 
               <b>Link ou email da denúncia</b>
 
-              <input class="text" class="input-base" name="link" size="40px" />
+              <input class="input-base" name="link" size="40px" />
               <br />
               <br />
               <b>Conte sua história:</b>
-              <textarea class="text" rows="10" cols="50" style="resize:none"> preencha com algum texto </textarea>
+              <textarea class="input-base" rows="10" cols="50" style="resize:none"> preencha com algum texto </textarea>
               <br />
               <class id="anexar"> Anexar documento <img src="../assets/paper-clip 1.jpg" width="28" height="28">
               </class>
