--- a/src/denuncia-modal/denuncia-modal.html
+++ b/src/denuncia-modal/denuncia-modal.html
@@ -18,31 +18,39 @@
 
 <body>
   <!-- DESKTOP -->
-  <div class="left-navbar">
+  <nav class="left-navbar">
     <div class="logo-nav">
       <img src="../assets/white_icon.svg" alt="sos-logo">
       <h4>WEB</h4>
     </div>
     <div class="nav-options">
       <div class="home-nav">
-        <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        </a>
         <p>Denúncias</p>
       </div>
       <div class="user-denunciations-nav">
-        <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        <a href="../minhas-denuncias/minhas-denuncias.html">
+          <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        </a>
         <p>Minhas denúncias</p>
       </div>
       <div class="logout-nav">
-        <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        <a href="../login/login.html">
+          <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        </a>
         <p>Sair</p>
       </div>
     </div>
-  </div>
+  </nav>
   <div class="app">
-    <div class="top-navbar">
+    <header class="top-navbar">
       <p>Lorem ipsum</p>
-      <img src="../assets/user.svg" alt="user">
-    </div>
+      <a href="../usuario/usuario.html">
+        <img src="../assets/user.svg" alt="user">
+      </a>
+    </header>
     <div class="app-container">
       <div class="card-app">
         <div class="denunciations">
@@ -73,9 +81,9 @@
                 <h1> Aloha </h1>
               </div>
               <div class="modal-content">
-                <p class="Malicioso"> Malicioso </p>
+                <p class="content-warning"> Malicioso </p>
                 <br />
-                <p class="aloha">www.aloha.net</p>
+                <p class="content-link">www.aloha.com.br</p>
                 <br />
                 Esse site de compras possui muitos comentários e avaliações de golpes
                 e aparentemente a plataforma não pune os estelionatários.
