--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -26,7 +26,9 @@
   <div class="app">
     <div class="top-navbar">
       <p>Fazer login</p>
-      <img src="../assets/user.svg" alt="user">
+      <a href="../login/login.html">
+        <img src="../assets/user.svg" alt="user">
+      </a>
     </div>
     <div class="app-container">
       <div class="card-app">
