--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -19,31 +19,39 @@
 </head>
 
 <body>
-  <div class="left-navbar">
+  <nav class="left-navbar">
     <div class="logo-nav">
       <img src="../assets/white_icon.svg" alt="sos-logo">
       <h4>WEB</h4>
     </div>
     <div class="nav-options">
       <div class="home-nav">
-        <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        </a>
         <p>Denúncias</p>
       </div>
       <div class="user-denunciations-nav">
-        <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        <a href="../minhas-denuncias/minhas-denuncias.html">
+          <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        </a>
         <p>Minhas denúncias</p>
       </div>
       <div class="logout-nav">
-        <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        <a href="../login/login.html">
+          <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        </a>
         <p>Sair</p>
       </div>
     </div>
-  </div>
+  </nav>
   <div class="app">
-    <div class="top-navbar">
+    <header class="top-navbar">
       <p>Lorem ipsum</p>
-      <img src="../assets/user.svg" alt="user">
-    </div>
+      <a href="../usuario/usuario.html">
+        <img src="../assets/user.svg" alt="user">
+      </a>
+    </header>
     <div class="app-container">
       <div class="card-app">
         <div class="denounce">
@@ -74,14 +82,17 @@
             </div>
           </div>
           <!-- Botão +-->
-          <button>+</button>
+          <a class="add-button" href="../criar-denuncia/criar-denuncia.html">
+            <!-- trocar <button> por <a type="button"> -->
+            +
+          </a>
 
           <!-- Barra Menu-->
-          <!-- <div class="menu-bar">
+          <div class="menu-bar">
             <img src="../assets/icon-user.svg" alt="icon">
             <img src="../assets/icon-home.svg" alt="icon">
             <img src="../assets/icon-tasklist.svg" alt="icon">
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
