feat: add menu bar when in mobile view

--- a/src/adicionar-comentarios/adicionar-comentarios.html
+++ b/src/adicionar-comentarios/adicionar-comentarios.html
@@ -54,6 +54,9 @@
       <div class="card-app">
         <div class="sign-up">
           <div class="form-container">
+            <div class="option-header">
+              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+            </div>
             <p class="text-main-color">Comentário</p>
             <form name="form_login" class="form-login" action="../denuncia-modal/denuncia-modal.html">
               <!-- method="POST" -->
@@ -69,11 +72,11 @@
             <br />
             <br />
             <br />
-            <!-- <div class=" menu-bar">
+            <div class=" menu-bar">
               <img src="../assets/icon-user.svg" alt="icon">
               <img src="../assets/icon-home.svg" alt="icon">
               <img src="../assets/icon-tasklist.svg" alt="icon">
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
