--- a/src/admin/admin.html
+++ b/src/admin/admin.html
@@ -47,6 +47,9 @@
       <div class="card-app">
         <div class="denunciations">
           <header>
+            <div class="option-header">
+              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+            </div>
             <h1>Denúncias</h1>
             <div class="form-search">
               <p>Pesquisa</p>
@@ -229,8 +232,13 @@
               <p>Total de registros: 10</p>
               <div class="pagination">
                 <p>Página 1 de 143</p>
-                <img src="../assets/chevron-right.svg" alt="next-pagination">
+                <img class="next-pagination" src="../assets/chevron-right.svg" alt="next-pagination">
               </div>
+            </div>
+            <div class="menu-bar">
+              <img src="../assets/icon-user.svg" alt="icon">
+              <img src="../assets/icon-home.svg" alt="icon">
+              <img src="../assets/icon-tasklist.svg" alt="icon">
             </div>
           </main>
         </div>
