--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -55,34 +55,37 @@
         <div class="sign-up">
           <!-- DIV DA PÁGINA -->
           <div class="form-container">
+            <div class="option-header">
+              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+            </div>
             <p class="text-main-color">Criar Denúncia </p>
             <form name="form_login" class="form-login" action="../minhas-denuncias/minhas-denuncias.html">
               <!-- method="POST" -->
               <b>Nome da instituição/vendedor:</b>
 
-              <input class="input-base" name="nome" size="40px" />
+              <input class="input-base" name="nome" />
 
               <br />
               <br />
 
               <b>Link ou email da denúncia</b>
 
-              <input class="input-base" name="link" size="40px" />
+              <input class="input-base" name="link" />
               <br />
               <br />
               <b>Conte sua história:</b>
-              <textarea class="input-base" rows="10" cols="50" style="resize:none"> preencha com algum texto </textarea>
+              <textarea class="input-base text-area-base" style="resize:none"> preencha com algum texto </textarea>
               <br />
               <class id="anexar"> Anexar documento <img src="../assets/paper-clip 1.jpg" width="28" height="28">
               </class>
               <br />
-              <input type="submit" class="button-base bg-main-color" size="30px" value="Finalizar Denúncia" />
+              <input type="submit" class="button-base bg-main-color" style="width:10rem;" value="Finalizar Denúncia" />
             </form>
-            <!-- <div class=" menu-bar">
+            <div class="menu-bar">
               <img src="../assets/icon-user.svg" alt="icon">
               <img src="../assets/icon-home.svg" alt="icon">
               <img src="../assets/icon-tasklist.svg" alt="icon">
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
