--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -55,6 +55,9 @@
     <div class="app-container">
       <div class="card-app">
         <div class="denounce">
+          <div class="option-header">
+            <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+          </div>
           <h1>Minhas Denúncias</h1>
           <!-- Analyses-->
           <div class="denounce-analyses">
