--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -52,6 +52,9 @@
     <div class="app-container">
       <div class="card-app">
         <div class="user">
+          <div class="option-header">
+            <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+          </div>
           <div class="user-image">
             <img src="../assets/user.svg" alt="logo" />
             <img class="edit-icon" src="../assets/edit.svg" alt="edit" />
@@ -94,11 +97,11 @@
             </span>
             <img class="edit-icon" src="../assets/edit.svg" alt="edit" />
           </div>
-          <!-- <div class="menu-bar">
+          <div class="menu-bar">
             <img src="../assets/icon-user.svg" alt="icon">
             <img src="../assets/icon-home.svg" alt="icon">
             <img src="../assets/icon-tasklist.svg" alt="icon">
-          </div> -->
+          </div>
         </div>
 </body>
 
