--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -34,6 +34,9 @@
       <div class="card-app">
         <div class="guest-denunciations">
           <header>
+            <div class="option-header">
+              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+            </div>
             <h1>Denúncias</h1>
             <div class="form-search">
               <p>Pesquisa</p>
@@ -46,9 +49,9 @@
             </div>
             <div class="filters">
               <p>Filtros</p>
-              <button class="button-base">Internacional</button>
-              <button class="button-base">Nacional</button>
-              <button class="button-base">Outros</button>
+              <button class="button-base">Alta</button>
+              <button class="button-base">Média</button>
+              <button class="button-base">Baixa</button>
             </div>
           </header>
           <main>
@@ -113,7 +116,7 @@
               <p>Total de registros: 10</p>
               <div class="pagination">
                 <p>Página 1 de 143</p>
-                <img src="../assets/chevron-right.svg" alt="next-pagination">
+                <img class="next-pagination" src="../assets/chevron-right.svg" alt="next-pagination">
               </div>
             </div>
           </main>
