--- a/src/comentarios/comentarios.html
+++ b/src/comentarios/comentarios.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="../reset.css" />
   <link rel="stylesheet" href="../base.css" />
-  <link rel="stylesheet" href="./Comentários.css" />
+  <link rel="stylesheet" href="./comentarios.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
