feat: add comentarios page

--- a/src/adicionar-comentarios/adicionar-comentarios.html
+++ b/src/adicionar-comentarios/adicionar-comentarios.html
@@ -55,10 +55,10 @@
         <div class="sign-up">
           <div class="form-container">
             <div class="option-header">
-              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="logout" />
             </div>
             <p class="text-main-color">Comentário</p>
-            <form name="form_login" class="form-login" action="../denuncia-modal/denuncia-modal.html">
+            <form name="form_login" class="form-login" action="../comentarios/comentarios.html">
               <!-- method="POST" -->
               <br />
               <p1 class="escreva">Escreva algum comentário:</p1>
@@ -72,10 +72,16 @@
             <br />
             <br />
             <br />
-            <div class=" menu-bar">
-              <img src="../assets/icon-user.svg" alt="icon">
-              <img src="../assets/icon-home.svg" alt="icon">
-              <img src="../assets/icon-tasklist.svg" alt="icon">
+            <div class="menu-bar">
+              <a href="../usuario/usuario.html">
+                <img src="../assets/icon-user.svg" alt="icon">
+              </a>
+              <a href="../denuncias/denuncias.html">
+                <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+              </a>
+              <a href="../minhas-denuncias/minhas-denuncias.html">
+                <img src="../assets/icon-tasklist.svg" alt="icon">
+              </a>
             </div>
           </div>
         </div>
