--- a/src/denuncia-modal/denuncia-modal.html
+++ b/src/denuncia-modal/denuncia-modal.html
@@ -56,7 +56,7 @@
         <div class="denunciations">
           <header>
             <div class="option-header">
-              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="logout" />
             </div>
             <h1>Denúncias</h1>
             <div class="form-search">
@@ -82,6 +82,9 @@
               </a>
               <div class="modal-header">
                 <h1> Aloha </h1>
+                <a href="../comentarios/comentarios.html">
+                  <img style="padding-right: 1.5rem;" src="../assets/arrow-right.svg" alt="Comentários" />
+                </a>
               </div>
               <div class="modal-content">
                 <p class="content-warning"> Malicioso </p>
@@ -160,9 +163,15 @@
               </div>
             </div>
             <div class="menu-bar">
-              <img src="../assets/icon-user.svg" alt="icon">
-              <img src="../assets/icon-home.svg" alt="icon">
-              <img src="../assets/icon-tasklist.svg" alt="icon">
+              <a href="../usuario/usuario.html">
+                <img src="../assets/icon-user.svg" alt="icon">
+              </a>
+              <a href="../denuncias/denuncias.html">
+                <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+              </a>
+              <a href="../minhas-denuncias/minhas-denuncias.html">
+                <img src="../assets/icon-tasklist.svg" alt="icon">
+              </a>
             </div>
           </main>
         </div>
