--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -35,7 +35,7 @@
         <div class="guest-denunciations">
           <header>
             <div class="option-header">
-              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="logout" />
             </div>
             <h1>Denúncias</h1>
             <div class="form-search">
