--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -53,7 +53,7 @@
       <div class="card-app">
         <div class="user">
           <div class="option-header">
-            <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+            <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="logout" />
           </div>
           <div class="user-image">
             <img src="../assets/user.svg" alt="logo" />
@@ -98,9 +98,15 @@
             <img class="edit-icon" src="../assets/edit.svg" alt="edit" />
           </div>
           <div class="menu-bar">
-            <img src="../assets/icon-user.svg" alt="icon">
-            <img src="../assets/icon-home.svg" alt="icon">
-            <img src="../assets/icon-tasklist.svg" alt="icon">
+            <a href="../usuario/usuario.html">
+              <img src="../assets/icon-user.svg" alt="icon">
+            </a>
+            <a href="../denuncias/denuncias.html">
+              <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+            </a>
+            <a href="../minhas-denuncias/minhas-denuncias.html">
+              <img src="../assets/icon-tasklist.svg" alt="icon">
+            </a>
           </div>
         </div>
 </body>
