--- a/src/comentarios/comentarios.html
+++ b/src/comentarios/comentarios.html
@@ -17,26 +17,32 @@
 </head>
 
 <body>
-  <div class="left-navbar">
+  <nav class="left-navbar">
     <div class="logo-nav">
       <img src="../assets/white_icon.svg" alt="sos-logo">
       <h4>WEB</h4>
     </div>
     <div class="nav-options">
       <div class="home-nav">
-        <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+        </a>
         <p>Denúncias</p>
       </div>
       <div class="user-denunciations-nav">
-        <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        <a href="../minhas-denuncias/minhas-denuncias.html">
+          <img id="denunciations-icon" class="left-nav-icon" src="../assets/icon-tasklist.svg" alt="denunciations">
+        </a>
         <p>Minhas denúncias</p>
       </div>
       <div class="logout-nav">
-        <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        <a href="../login/login.html">
+          <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
+        </a>
         <p>Sair</p>
       </div>
     </div>
-  </div>
+  </nav>
   <div class="app">
     <div class="top-navbar">
       <p>Lorem ipsum</p>
@@ -44,34 +50,55 @@
     </div>
     <div class="app-container">
       <div class="card-app">
-        <div class="sign-up">
-          <!-- DIV DA PÁGINA -->
-          <div class="form-container">
-            <p class="Titulo">Aloha </p>
-            <form name="form_login" class="form-login" action="do_login.html" method="POST">
-              <div class="table">
-                <div>
-                  <p class="malicioso">Malicioso</p>
-                  <p class="riscoalto">RISCO ALTO </p>
-                </div>
-                <b>Link ou email da denúncia</b>
-
-                <input class="text" class="input-base" name="link" size="40px" />
-                <br />
-                <br />
-                <b>Conte sua história:</b>
-                <textarea class="text" rows="10" cols="50" style="resize:none"> preencha com algum texto </textarea>
-                <br />
-                <class id="anexar"> Anexar documento <img src="../assets/paper-clip 1.jpg" width="28" height="28">
-                </class>
-                <br />
-                <input type="submit" class="button-base bg-main-color" size="30px" value="Finalizar Denúncia" />
-            </form>
-            <!-- <div class=" menu-bar">
+        <div class="comments">
+          <header>
+            <div class="modal-header">
+              <h1> Aloha </h1>
+              <div class="option-header">
+                <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="logout" />
+              </div>
+            </div>
+            <div class="modal-content">
+              <p class="content-warning"> Malicioso </p>
+              <br />
+              <p class="content-link">www.aloha.com.br</p>
+              <br />
+              Esse site de compras possui muitos comentários e avaliações de golpes
+              e aparentemente a plataforma não pune os estelionatários.
+            </div>
+          </header>
+          <main>
+            <div class="add-comment">
+              <a href="../adicionar-comentarios/adicionar-comentarios.html">
+                <p>Escrever comentário > </p>
+              </a>
+            </div>
+            <div class="user-comment">
+              <img class="user-image" src="../assets/user.svg" alt="user">
+              <div class="comment-container">
+                <p>Tive uma experiência muito de
+                  sagradável, levei um golpe e não cheguei a ser ressarcido e a loja continua vendendo e aplicando
+                  golpes.</p>
+              </div>
+            </div>
+            <div class="user-comment">
+              <img class="user-image" src="../assets/user.svg" alt="user">
+              <div class="comment-container">
+                <p>Muito ruim, o site parece umamáfia, produtos muito baratose anúncios fora da realidade,parece ser
+                  tudo uma farsa!</p>
+              </div>
+            </div>
+          </main>
+          <div class="menu-bar">
+            <a href="../usuario/usuario.html">
               <img src="../assets/icon-user.svg" alt="icon">
-              <img src="../assets/icon-home.svg" alt="icon">
+            </a>
+            <a href="../denuncias/denuncias.html">
+              <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+            </a>
+            <a href="../minhas-denuncias/minhas-denuncias.html">
               <img src="../assets/icon-tasklist.svg" alt="icon">
-            </div> -->
+            </a>
           </div>
         </div>
       </div>
