--- a/src/criar-denuncia/criar-denuncia.html
+++ b/src/criar-denuncia/criar-denuncia.html
@@ -56,7 +56,7 @@
           <!-- DIV DA PÁGINA -->
           <div class="form-container">
             <div class="option-header">
-              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+              <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="logout" />
             </div>
             <p class="text-main-color">Criar Denúncia </p>
             <form name="form_login" class="form-login" action="../minhas-denuncias/minhas-denuncias.html">
@@ -82,9 +82,15 @@
               <input type="submit" class="button-base bg-main-color" style="width:10rem;" value="Finalizar Denúncia" />
             </form>
             <div class="menu-bar">
-              <img src="../assets/icon-user.svg" alt="icon">
-              <img src="../assets/icon-home.svg" alt="icon">
-              <img src="../assets/icon-tasklist.svg" alt="icon">
+              <a href="../usuario/usuario.html">
+                <img src="../assets/icon-user.svg" alt="icon">
+              </a>
+              <a href="../denuncias/denuncias.html">
+                <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+              </a>
+              <a href="../minhas-denuncias/minhas-denuncias.html">
+                <img src="../assets/icon-tasklist.svg" alt="icon">
+              </a>
             </div>
           </div>
         </div>
