--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -56,7 +56,7 @@
       <div class="card-app">
         <div class="denounce">
           <div class="option-header">
-            <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="Search" />
+            <img class="tree-dots-option" src="../assets/tree-dots.svg" alt="logout" />
           </div>
           <h1>Minhas Denúncias</h1>
           <!-- Analyses-->
@@ -92,9 +92,15 @@
 
           <!-- Barra Menu-->
           <div class="menu-bar">
-            <img src="../assets/icon-user.svg" alt="icon">
-            <img src="../assets/icon-home.svg" alt="icon">
-            <img src="../assets/icon-tasklist.svg" alt="icon">
+            <a href="../usuario/usuario.html">
+              <img src="../assets/icon-user.svg" alt="icon">
+            </a>
+            <a href="../denuncias/denuncias.html">
+              <img id="home-icon" class="left-nav-icon" src="../assets/icon-home.svg" alt="home">
+            </a>
+            <a href="../minhas-denuncias/minhas-denuncias.html">
+              <img src="../assets/icon-tasklist.svg" alt="icon">
+            </a>
           </div>
         </div>
       </div>
