--- a/src/cadastro/cadastro.html
+++ b/src/cadastro/cadastro.html
@@ -21,7 +21,7 @@
     <div class="form-container">
       <p class="text-main-color">Cadastro</p>
       <br />
-      <form name="form_login" class="form-login" action="../login/login.html"> <br />
+      <form name="form_login" class="form-login" action="../../index.html"> <br />
         <!-- method="POST" -->
         <input type="text" class="input-base" name="nome" placeholder="Nome Completo" /><br />
         <input type="text" class="input-base" name="cpf" placeholder="CPF" /><br />
