--- a/src/denuncias-convidado/denuncias-convidado.html
+++ b/src/denuncias-convidado/denuncias-convidado.html
@@ -26,7 +26,7 @@
   <div class="app">
     <div class="top-navbar">
       <p>Fazer login</p>
-      <a href="../login/login.html">
+      <a href="../../index.html">
         <img src="../assets/user.svg" alt="user">
       </a>
     </div>
