--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -38,7 +38,7 @@
         <p>Minhas denúncias</p>
       </div>
       <div class="logout-nav">
-        <a href="../login/login.html">
+        <a href="../../index.html">
           <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
         </a>
         <p>Sair</p>
