--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="../reset.css" />
-  <link rel="stylesheet" href="../base.css" />
+  <link rel="stylesheet" href="./src/reset.css" />
+  <link rel="stylesheet" href="./src/base.css" />
   <link rel="stylesheet" href="./login.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,21 +19,21 @@
 <body>
   <div class="card-mobile sign-up">
     <div class="logo-container">
-      <img src="../assets/logo.svg" alt="logo" />
+      <img src="./src/assets/logo.svg" alt="logo" />
       <h1>WEB</h1>
     </div>
     <div class="form-container">
       <p class="text-main-color">LOGIN</p>
-      <form name="form_login" class="form-login" action="../denuncias/denuncias.html">
+      <form name="form_login" class="form-login" action="./src/denuncias/denuncias.html">
         <!--method="POST"-->
         <input type="text" class="input-base" name="nome" placeholder="Usuário" /><br />
         <input type="password" class="input-base" name="senha" placeholder="Senha" /><br />
         <input type="submit" class="button-base bg-main-color" value="Entrar" />
       </form>
       <div class="options">
-        <a href="../recuperar-senha/recuperar-senha.html"> Esqueceu a Senha?</a>
-        <a href="../cadastro/cadastro.html"> Cadastrar</a>
-        <a href="../denuncias-convidado/denuncias-convidado.html"> Entrar como convidado</a>
+        <a href="./src/recuperar-senha/recuperar-senha.html"> Esqueceu a Senha?</a>
+        <a href="./src/cadastro/cadastro.html"> Cadastrar</a>
+        <a href="./src/denuncias-convidado/denuncias-convidado.html"> Entrar como convidado</a>
       </div>
     </div>
   </div>
