--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -20,7 +20,7 @@
     </div>
     <div class="form-container">
       <p class="text-main-color">RECUPERAR SENHA</p>
-      <form name="form_recupsenha" class="form-recupsenha" action="../login/login.html">
+      <form name="form_recupsenha" class="form-recupsenha" action="../../index.html">
         <!--method="POST"-->
         <input type="password" class="input-base" name="senha1" placeholder="Insira sua nova senha" /><br />
         <input type="password" class="input-base" name="senha" placeholder="Repita sua nova senha" /><br />
