--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -35,7 +35,7 @@
         <p>Minhas denúncias</p>
       </div>
       <div class="logout-nav">
-        <a href="../login/login.html">
+        <a href="../../index.html">
           <img id="logout-icon" class="left-nav-icon" src="../assets/exit.svg" alt="logout">
         </a>
         <p>Sair</p>
