Criação tela de inserir e-mail

--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -24,7 +24,7 @@
         <!--method="POST"-->
         <input type="password" class="input-base" name="senha1" placeholder="Insira sua nova senha" /><br />
         <input type="password" class="input-base" name="senha" placeholder="Repita sua nova senha" /><br />
-        <input type="submit" class="button-base bg-main-color" value="Salvar" />
+        <input type="submit" class="button-base bg-main-color" value="Enviar" />
       </form>
     </div>
   </div>
