alteração type email

--- a/src/recuperar-senha/insira-seu-email.html
+++ b/src/recuperar-senha/insira-seu-email.html
@@ -22,7 +22,7 @@
       <p class="text-main-color">RECUPERAR SENHA</p>
       <form name="form_recupsenha2" class="form-recupsenha2" action="../recuperar-senha/recuperar-senha.html">
         <!--method="POST"-->
-        <input type="text" class="input-base" name="senha1" placeholder="Insira seu e-mail" /><br />
+        <input type="email" class="input-base" name="senha1" placeholder="Insira seu e-mail" /><br />
         <input type="submit" class="button-base bg-main-color" value="Enviar" />
       </form>
     </div>
